tests/lean/t12.lean.expected.out
λ f g x y, f x (g x y) : (N → N → N) → (N → N → N) → N → N → N
t12.lean:7:7: error: invalid expression
